# g3dav

./: .gitignore  README.md
macos/: Package.swift  README.md  build_app.sh
macos/Sources/G3DAVApp/: AnaglyphView.swift  Anaglyphic.swift  AppState.swift  ColorWell.swift  ContentView.swift  G3DAVApp.swift  Matrix3D.swift  Model3D.swift  ModelLoader.swift
macos/assets/: G3DAVApp.icns
original/: CHANGES  INSTALL  LICENSE.TXT  Makefile  Makefile.in  README  configure  configure.in  zits.csv
original/include/: anaglyphic.h  dialogs.h  g3dav.h  matrix3d.h  model3d.h
original/src/: Makefile  Makefile.in  anaglyphic.c  colordialog.c  dialogs.c  g3dav.c  matrix3d.c  model3d.c
webgl/: README.md  app.js  index.html  style.css
webgl/samples/: manifest.json
