dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/anaglyphic.c)

dnl Checks for programs.
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -libs:
AC_CHECK_LIB(ibs, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(src/Makefile Makefile)
